--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
         <div class="nav-right">
             <!-- <span class="nav-icon"><i class="fas fa-user"></i></span> -->
-            <img src="./img/user.png" alt="" lazy="loading">
-            <img src="./img/search2.png" alt="" lazy="loading">
-            <img src="./img/bag.png" alt="" lazy="loading">
+            <img src="./user.png" alt="" lazy="loading">
+            <img src="./search2.png" alt="" lazy="loading">
+            <img src="./bag.png" alt="" lazy="loading">
 
            
         </div>
@@ -54,7 +54,7 @@
             </p>
             <br>
             <a href="#" class="hero-button">
-             <img src="./img/Play.png" alt="">
+             <img src="./Play.png" alt="">
               EXPLORE
             </a>
         </div>
@@ -67,7 +67,7 @@
         <div class="search-container">
             <input type="text" id="search-input" class="search-input" placeholder="Search photos..." value="Laptop">
 
-            <img src="./img/Search.png" class="search-icon" id="search-button" lazy="loading">
+            <img src="./Search.png" class="search-icon" id="search-button" lazy="loading">
 
         </div>
     </section>
